# LVS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py
.github/workflows/: ci.yml
backend/: main.py
backend/api/: scan.py
backend/engines/: base.py  data_leakage.py  data_poisoning.py  excessive_agency.py  hallucination.py  insecure_output.py  mitigation_engine.py  model_theft.py  overreliance.py  prompt_injection.py  risk_engine.py  supply_chain.py  target_wrapper.py
backend/utils/: logger.py  pdf_export.py
frontend/: dashboard.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_risk_engine.py  test_scanners.py  test_target_wrapper.py
